fix: Corrected misalignment of header text

--- a/src/components/HeaderBar.scss
+++ b/src/components/HeaderBar.scss
@@ -2,12 +2,8 @@
 
 .TopToolbar {
     min-width: 100%;
-    min-height: 12%;
-    max-height: 64px;
-    padding-left: 3%;
-    padding-right: 3%;
-    padding-top: 1%;
-    padding-bottom: 0%;
+    height: 64px;
+    padding: 0.5% 3%;
 }
 
 .TopBarRow {
